--- a/styles.less
+++ b/styles.less
@@ -1,9 +1,13 @@
 body {
-    h1 {
-        text-transform: none;
-    };
     div {
-        .main {
+        .vis2 {
+            margin-right: auto;
+            margin-left: auto;
+        }
+        .reveal{
+            h1, h2, h3, h4, h5 {
+                text-transform: none;
+            }
         }
     }
 }
